--- a/faq.org
+++ b/faq.org
@@ -9,3 +9,8 @@ Open Source Definition. To help to people with few resources, females,
 or some minority, we must use another kind of licenses or other ideas.
 
 You can visit [[https://opensource.org/osd][Open Source Definition]] to read the full definition.
+* Is it possible make this license compatible with GPL?
+This license is not compatible with GPL. But if you are the copyright
+holder, you can consider create a dual license for your
+software. Perhaps you want make the most new releases for the working
+class and give GPL software with other versions.
